初始化扫描规则